// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview when given a width and height renders with the given width and height 1`] = `
.c2 + .c0 {
  margin-top: 3px;
}

.c3 + .c0 {
  margin-top: 3px;
}

.c1 {
  -webkit-animation: blNbyL 2s ease infinite;
  animation: blNbyL 2s ease infinite;
  background: var(--colorsUtilityMajor150);
  display: block;
  height: 20px;
  opacity: 0.6;
  width: 10px;
}

.c1 + .c0 {
  margin-top: 3px;
}

<div
  className=""
>
  <span
    className="c0 c1"
    data-component="preview"
    height="20px"
    width="10px"
  />
</div>
`;

exports[`Preview when given children but a truthy loading prop will render the placeholder 1`] = `
.c1 {
  -webkit-animation: blNbyL 2s ease infinite;
  animation: blNbyL 2s ease infinite;
  background: var(--colorsUtilityMajor150);
  display: block;
  height: 15px;
  opacity: 0.6;
  width: 100%;
}

.c1 + .c0 {
  margin-top: 3px;
}

<div
  className=""
>
  <span
    className="c0 c1"
    data-component="preview"
  />
</div>
`;

exports[`Preview when given children will render the children 1`] = `
<div
  className=""
>
  This is some text
</div>
`;

exports[`Preview when given no children and a falsy loading prop will render nothing 1`] = `
<div
  className=""
/>
`;

exports[`Preview when given no children will render the placeholder 1`] = `
.c1 {
  -webkit-animation: blNbyL 2s ease infinite;
  animation: blNbyL 2s ease infinite;
  background: var(--colorsUtilityMajor150);
  display: block;
  height: 15px;
  opacity: 0.6;
  width: 100%;
}

.c1 + .c0 {
  margin-top: 3px;
}

<div
  className=""
>
  <span
    className="c0 c1"
    data-component="preview"
  />
</div>
`;

exports[`Preview when multi line renders multi previews, the last being 80% width 1`] = `
.c1 {
  -webkit-animation: blNbyL 2s ease infinite;
  animation: blNbyL 2s ease infinite;
  background: var(--colorsUtilityMajor150);
  display: block;
  height: 15px;
  opacity: 0.6;
  width: 100%;
}

.c1 + .c0 {
  margin-top: 3px;
}

.c2 {
  -webkit-animation: blNbyL 2s ease infinite;
  animation: blNbyL 2s ease infinite;
  background: var(--colorsUtilityMajor150);
  display: block;
  height: 15px;
  opacity: 0.6;
  width: 80%;
}

.c2 + .c0 {
  margin-top: 3px;
}

<div
  className=""
>
  <span
    className="c0 c1"
    data-component="preview"
  />
  <span
    className="c0 c1"
    data-component="preview"
  />
  <span
    className="c0 c2"
    data-component="preview"
    width="80%"
  />
</div>
`;
